// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionList /> should not update while suggestions are fetching 1`] = `
<SuggestionList
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  suggestions={
    Array [
      "foo",
      "foo bar",
      "foo bar buz",
      "foo bar buz quz",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      Object {
        "onClick": [Function],
        "styles": Object {
          "item": Object {
            "data-css-xt0zkn": "",
          },
          "list": Object {
            "data-css-1aemm47": "",
          },
        },
        "suggestions": Array [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ],
      }
    }
  >
    <Portal
      name="search.suggestions.before"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
        }
      }
    />
    <Portal
      name="search.suggestions"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1aemm47": "",
          }
        }
      >
        <SurroundPortals
          key="foo"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo",
              "testId": "searchSuggestion foo",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo"
              onClick={[Function]}
              value="foo"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                >
                  foo
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar",
              "testId": "searchSuggestion foo bar",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar"
              onClick={[Function]}
              value="foo bar"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                >
                  foo bar
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar buz",
              "testId": "searchSuggestion foo bar buz",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz"
              onClick={[Function]}
              value="foo bar buz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                >
                  foo bar buz
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz quz"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar buz quz",
              "testId": "searchSuggestion foo bar buz quz",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz quz"
              onClick={[Function]}
              value="foo bar buz quz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz quz",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                >
                  foo bar buz quz
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          />
        </SurroundPortals>
      </div>
    </Portal>
    <Portal
      name="search.suggestions.after"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
        }
      }
    />
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 2`] = `
<SuggestionList
  bottomHeight={10}
  fetching={true}
  onClick={[Function]}
  suggestions={
    Array [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      Object {
        "onClick": [Function],
        "styles": Object {
          "item": Object {
            "data-css-xt0zkn": "",
          },
          "list": Object {
            "data-css-1aemm47": "",
          },
        },
        "suggestions": Array [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ],
      }
    }
  >
    <Portal
      name="search.suggestions.before"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
        }
      }
    />
    <Portal
      name="search.suggestions"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1aemm47": "",
          }
        }
      >
        <SurroundPortals
          key="foo"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo",
              "testId": "searchSuggestion foo",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo"
              onClick={[Function]}
              value="foo"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                >
                  foo
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar",
              "testId": "searchSuggestion foo bar",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar"
              onClick={[Function]}
              value="foo bar"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                >
                  foo bar
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar buz",
              "testId": "searchSuggestion foo bar buz",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz"
              onClick={[Function]}
              value="foo bar buz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                >
                  foo bar buz
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz quz"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar buz quz",
              "testId": "searchSuggestion foo bar buz quz",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz quz"
              onClick={[Function]}
              value="foo bar buz quz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz quz",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                >
                  foo bar buz quz
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          />
        </SurroundPortals>
      </div>
    </Portal>
    <Portal
      name="search.suggestions.after"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
        }
      }
    />
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 3`] = `
<SuggestionList
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  suggestions={
    Array [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      Object {
        "onClick": [Function],
        "styles": Object {
          "item": Object {
            "data-css-xt0zkn": "",
          },
          "list": Object {
            "data-css-1aemm47": "",
          },
        },
        "suggestions": Array [
          "foo bar buz quz",
          "foo bar buz",
          "foo bar",
          "foo",
        ],
      }
    }
  >
    <Portal
      name="search.suggestions.before"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo bar buz quz",
            "foo bar buz",
            "foo bar",
            "foo",
          ],
        }
      }
    />
    <Portal
      name="search.suggestions"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo bar buz quz",
            "foo bar buz",
            "foo bar",
            "foo",
          ],
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1aemm47": "",
          }
        }
      >
        <SurroundPortals
          key="foo bar buz quz"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar buz quz",
              "testId": "searchSuggestion foo bar buz quz",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz quz"
              onClick={[Function]}
              value="foo bar buz quz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz quz",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                >
                  foo bar buz quz
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
                "testId": "searchSuggestion foo bar buz quz",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar buz",
              "testId": "searchSuggestion foo bar buz",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz"
              onClick={[Function]}
              value="foo bar buz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                >
                  foo bar buz
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar buz",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar buz",
                "testId": "searchSuggestion foo bar buz",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo bar"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo bar",
              "testId": "searchSuggestion foo bar",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar"
              onClick={[Function]}
              value="foo bar"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                >
                  foo bar
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo bar",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo bar",
                "testId": "searchSuggestion foo bar",
              }
            }
          />
        </SurroundPortals>
        <SurroundPortals
          key="foo"
          portalName="search.suggestion-item"
          portalProps={
            Object {
              "className": Object {
                "data-css-xt0zkn": "",
              },
              "onClick": [Function],
              "suggestion": "foo",
              "testId": "searchSuggestion foo",
            }
          }
        >
          <Portal
            name="search.suggestion-item.before"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          />
          <Portal
            name="search.suggestion-item"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          >
            <button
              className={
                Object {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo"
              onClick={[Function]}
              value="foo"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo",
                  }
                }
              >
                <Portal
                  name="search.suggestion-item-content.before"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                />
                <Portal
                  name="search.suggestion-item-content"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                >
                  foo
                </Portal>
                <Portal
                  name="search.suggestion-item-content.after"
                  props={
                    Object {
                      "suggestion": "foo",
                    }
                  }
                />
              </SurroundPortals>
            </button>
          </Portal>
          <Portal
            name="search.suggestion-item.after"
            props={
              Object {
                "className": Object {
                  "data-css-xt0zkn": "",
                },
                "onClick": [Function],
                "suggestion": "foo",
                "testId": "searchSuggestion foo",
              }
            }
          />
        </SurroundPortals>
      </div>
    </Portal>
    <Portal
      name="search.suggestions.after"
      props={
        Object {
          "onClick": [Function],
          "styles": Object {
            "item": Object {
              "data-css-xt0zkn": "",
            },
            "list": Object {
              "data-css-1aemm47": "",
            },
          },
          "suggestions": Array [
            "foo bar buz quz",
            "foo bar buz",
            "foo bar",
            "foo",
          ],
        }
      }
    />
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should render a list of suggestions 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SuggestionList)
    bottomHeight={10}
    onClick={[Function]}
  >
    <SuggestionList
      bottomHeight={10}
      dispatch={[Function]}
      fetching={false}
      onClick={[Function]}
      suggestions={
        Array [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ]
      }
    >
      <SurroundPortals
        portalName="search.suggestions"
        portalProps={
          Object {
            "onClick": [Function],
            "styles": Object {
              "item": Object {
                "data-css-xt0zkn": "",
              },
              "list": Object {
                "data-css-1aemm47": "",
              },
            },
            "suggestions": Array [
              "foo",
              "foo bar",
              "foo bar buz",
              "foo bar buz quz",
            ],
          }
        }
      >
        <Portal
          name="search.suggestions.before"
          props={
            Object {
              "onClick": [Function],
              "styles": Object {
                "item": Object {
                  "data-css-xt0zkn": "",
                },
                "list": Object {
                  "data-css-1aemm47": "",
                },
              },
              "suggestions": Array [
                "foo",
                "foo bar",
                "foo bar buz",
                "foo bar buz quz",
              ],
            }
          }
        />
        <Portal
          name="search.suggestions"
          props={
            Object {
              "onClick": [Function],
              "styles": Object {
                "item": Object {
                  "data-css-xt0zkn": "",
                },
                "list": Object {
                  "data-css-1aemm47": "",
                },
              },
              "suggestions": Array [
                "foo",
                "foo bar",
                "foo bar buz",
                "foo bar buz quz",
              ],
            }
          }
        >
          <div
            className={
              Object {
                "data-css-1aemm47": "",
              }
            }
          >
            <SurroundPortals
              key="foo"
              portalName="search.suggestion-item"
              portalProps={
                Object {
                  "className": Object {
                    "data-css-xt0zkn": "",
                  },
                  "onClick": [Function],
                  "suggestion": "foo",
                  "testId": "searchSuggestion foo",
                }
              }
            >
              <Portal
                name="search.suggestion-item.before"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo",
                    "testId": "searchSuggestion foo",
                  }
                }
              />
              <Portal
                name="search.suggestion-item"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo",
                    "testId": "searchSuggestion foo",
                  }
                }
              >
                <button
                  className={
                    Object {
                      "data-css-xt0zkn": "",
                    }
                  }
                  data-test-id="searchSuggestion foo"
                  onClick={[Function]}
                  value="foo"
                >
                  <SurroundPortals
                    portalName="search.suggestion-item-content"
                    portalProps={
                      Object {
                        "suggestion": "foo",
                      }
                    }
                  >
                    <Portal
                      name="search.suggestion-item-content.before"
                      props={
                        Object {
                          "suggestion": "foo",
                        }
                      }
                    />
                    <Portal
                      name="search.suggestion-item-content"
                      props={
                        Object {
                          "suggestion": "foo",
                        }
                      }
                    >
                      foo
                    </Portal>
                    <Portal
                      name="search.suggestion-item-content.after"
                      props={
                        Object {
                          "suggestion": "foo",
                        }
                      }
                    />
                  </SurroundPortals>
                </button>
              </Portal>
              <Portal
                name="search.suggestion-item.after"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo",
                    "testId": "searchSuggestion foo",
                  }
                }
              />
            </SurroundPortals>
            <SurroundPortals
              key="foo bar"
              portalName="search.suggestion-item"
              portalProps={
                Object {
                  "className": Object {
                    "data-css-xt0zkn": "",
                  },
                  "onClick": [Function],
                  "suggestion": "foo bar",
                  "testId": "searchSuggestion foo bar",
                }
              }
            >
              <Portal
                name="search.suggestion-item.before"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar",
                    "testId": "searchSuggestion foo bar",
                  }
                }
              />
              <Portal
                name="search.suggestion-item"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar",
                    "testId": "searchSuggestion foo bar",
                  }
                }
              >
                <button
                  className={
                    Object {
                      "data-css-xt0zkn": "",
                    }
                  }
                  data-test-id="searchSuggestion foo bar"
                  onClick={[Function]}
                  value="foo bar"
                >
                  <SurroundPortals
                    portalName="search.suggestion-item-content"
                    portalProps={
                      Object {
                        "suggestion": "foo bar",
                      }
                    }
                  >
                    <Portal
                      name="search.suggestion-item-content.before"
                      props={
                        Object {
                          "suggestion": "foo bar",
                        }
                      }
                    />
                    <Portal
                      name="search.suggestion-item-content"
                      props={
                        Object {
                          "suggestion": "foo bar",
                        }
                      }
                    >
                      foo bar
                    </Portal>
                    <Portal
                      name="search.suggestion-item-content.after"
                      props={
                        Object {
                          "suggestion": "foo bar",
                        }
                      }
                    />
                  </SurroundPortals>
                </button>
              </Portal>
              <Portal
                name="search.suggestion-item.after"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar",
                    "testId": "searchSuggestion foo bar",
                  }
                }
              />
            </SurroundPortals>
            <SurroundPortals
              key="foo bar buz"
              portalName="search.suggestion-item"
              portalProps={
                Object {
                  "className": Object {
                    "data-css-xt0zkn": "",
                  },
                  "onClick": [Function],
                  "suggestion": "foo bar buz",
                  "testId": "searchSuggestion foo bar buz",
                }
              }
            >
              <Portal
                name="search.suggestion-item.before"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar buz",
                    "testId": "searchSuggestion foo bar buz",
                  }
                }
              />
              <Portal
                name="search.suggestion-item"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar buz",
                    "testId": "searchSuggestion foo bar buz",
                  }
                }
              >
                <button
                  className={
                    Object {
                      "data-css-xt0zkn": "",
                    }
                  }
                  data-test-id="searchSuggestion foo bar buz"
                  onClick={[Function]}
                  value="foo bar buz"
                >
                  <SurroundPortals
                    portalName="search.suggestion-item-content"
                    portalProps={
                      Object {
                        "suggestion": "foo bar buz",
                      }
                    }
                  >
                    <Portal
                      name="search.suggestion-item-content.before"
                      props={
                        Object {
                          "suggestion": "foo bar buz",
                        }
                      }
                    />
                    <Portal
                      name="search.suggestion-item-content"
                      props={
                        Object {
                          "suggestion": "foo bar buz",
                        }
                      }
                    >
                      foo bar buz
                    </Portal>
                    <Portal
                      name="search.suggestion-item-content.after"
                      props={
                        Object {
                          "suggestion": "foo bar buz",
                        }
                      }
                    />
                  </SurroundPortals>
                </button>
              </Portal>
              <Portal
                name="search.suggestion-item.after"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar buz",
                    "testId": "searchSuggestion foo bar buz",
                  }
                }
              />
            </SurroundPortals>
            <SurroundPortals
              key="foo bar buz quz"
              portalName="search.suggestion-item"
              portalProps={
                Object {
                  "className": Object {
                    "data-css-xt0zkn": "",
                  },
                  "onClick": [Function],
                  "suggestion": "foo bar buz quz",
                  "testId": "searchSuggestion foo bar buz quz",
                }
              }
            >
              <Portal
                name="search.suggestion-item.before"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar buz quz",
                    "testId": "searchSuggestion foo bar buz quz",
                  }
                }
              />
              <Portal
                name="search.suggestion-item"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar buz quz",
                    "testId": "searchSuggestion foo bar buz quz",
                  }
                }
              >
                <button
                  className={
                    Object {
                      "data-css-xt0zkn": "",
                    }
                  }
                  data-test-id="searchSuggestion foo bar buz quz"
                  onClick={[Function]}
                  value="foo bar buz quz"
                >
                  <SurroundPortals
                    portalName="search.suggestion-item-content"
                    portalProps={
                      Object {
                        "suggestion": "foo bar buz quz",
                      }
                    }
                  >
                    <Portal
                      name="search.suggestion-item-content.before"
                      props={
                        Object {
                          "suggestion": "foo bar buz quz",
                        }
                      }
                    />
                    <Portal
                      name="search.suggestion-item-content"
                      props={
                        Object {
                          "suggestion": "foo bar buz quz",
                        }
                      }
                    >
                      foo bar buz quz
                    </Portal>
                    <Portal
                      name="search.suggestion-item-content.after"
                      props={
                        Object {
                          "suggestion": "foo bar buz quz",
                        }
                      }
                    />
                  </SurroundPortals>
                </button>
              </Portal>
              <Portal
                name="search.suggestion-item.after"
                props={
                  Object {
                    "className": Object {
                      "data-css-xt0zkn": "",
                    },
                    "onClick": [Function],
                    "suggestion": "foo bar buz quz",
                    "testId": "searchSuggestion foo bar buz quz",
                  }
                }
              />
            </SurroundPortals>
          </div>
        </Portal>
        <Portal
          name="search.suggestions.after"
          props={
            Object {
              "onClick": [Function],
              "styles": Object {
                "item": Object {
                  "data-css-xt0zkn": "",
                },
                "list": Object {
                  "data-css-1aemm47": "",
                },
              },
              "suggestions": Array [
                "foo",
                "foo bar",
                "foo bar buz",
                "foo bar buz quz",
              ],
            }
          }
        />
      </SurroundPortals>
    </SuggestionList>
  </Connect(SuggestionList)>
</Provider>
`;
